yaml-example/csisecretingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tlstest
  namespace: nginxdemo
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  rules:
  - host: tlstest.southlincolnstudios.com
    http:
      paths:
      - backend:
          serviceName: nginxdemo
          servicePort: 80
        path: /
  tls:
   - secretName: ingress-tls-csi
